--- a/集合论与图论.md
+++ b/集合论与图论.md
@@ -277,11 +277,23 @@ f:对X中**每个**元素x**都有**Y中唯一确定的元素y与之对应。
 
 ![image-20250304163008012](./pic/image-20250304163008012.png)
 
-![image-20250305140932875](./pic/image-20250305140932875.png)
+![image-20250324113000509](./pic/image-20250324113000509.png)
 
-![image-20250305140920960](./pic/image-20250305140920960.png)
+![image-20250324113008780](./pic/image-20250324113008780.png)
+
+![image-20250324113341601](./pic/image-20250324113341601.png)
+
+![image-20250324114153476](./pic/image-20250324114153476.png)
+
+
+
+
 
 ## 2.7 运算
+
+![image-20250324114533697](./pic/image-20250324114533697.png)
+
+![image-20250324114746167](./pic/image-20250324114746167.png)
 
 ![image-20250304164547782](./pic/image-20250304164547782.png)
 
@@ -289,9 +301,15 @@ f:对X中**每个**元素x**都有**Y中唯一确定的元素y与之对应。
 
 ![image-20250304165212572](./pic/image-20250304165212572.png)
 
+![image-20250305140932875](./pic/image-20250305140932875.png)
 
+![image-20250305140920960](./pic/image-20250305140920960.png)
+
+![image-20250324115437979](./pic/image-20250324115437979.png)
 
 ## 2.8 特征函数
+
+![image-20250324115749578](./pic/image-20250324115749578.png)
 
 ![image-20250304170015154](./pic/image-20250304170015154.png)
 
@@ -329,6 +347,14 @@ f:对X中**每个**元素x**都有**Y中唯一确定的元素y与之对应。
 
 ![image-20250304182953962](./pic/image-20250304182953962.png)
 
+![image-20250324121250896](./pic/image-20250324121250896.png)
+
+![image-20250324121139531](./pic/image-20250324121139531.png)
+
+![image-20250324121145057](./pic/image-20250324121145057.png)
+
+![image-20250324121312688](./pic/image-20250324121312688.png)
+
 ![image-20250304183107662](./pic/image-20250304183107662.png)
 
 ![image-20250304193616551](./pic/image-20250304193616551.png)
@@ -339,13 +365,43 @@ f:对X中**每个**元素x**都有**Y中唯一确定的元素y与之对应。
 
 ![image-20250304194104299](./pic/image-20250304194104299.png)
 
+
+
+![image-20250324122143446](./pic/image-20250324122143446.png)
+
+自反必然包含所有(x,x)。反自反是所有的(x,x)均不存在。
+
+![image-20250324122259622](./pic/image-20250324122259622.png)
+
 ![image-20250304195010032](./pic/image-20250304195010032.png)
+
+![image-20250324122704977](./pic/image-20250324122704977.png)
+
+![image-20250324123114219](./pic/image-20250324123114219.png)
+
+![image-20250324123607876](./pic/image-20250324123607876.png)
+
+![image-20250324125239310](./pic/image-20250324125239310.png)
+
+![image-20250324125326722](./pic/image-20250324125326722.png)
+
+![image-20250324125343693](./pic/image-20250324125343693.png)
 
 ![image-20250304195722493](./pic/image-20250304195722493.png)
 
 ![image-20250304200225694](./pic/image-20250304200225694.png)
 
+![image-20250324125406492](./pic/image-20250324125406492.png)
+
 ![image-20250304201155820](./pic/image-20250304201155820.png)
+
+![image-20250324130454190](./pic/image-20250324130454190.png)
+
+![image-20250324131239862](./pic/image-20250324131239862.png)
+
+![image-20250324131537688](./pic/image-20250324131537688.png)
+
+![image-20250305160208397](./pic/image-20250305160208397.png)
 
 ## 3.3 关系的运算
 
@@ -353,15 +409,31 @@ f:对X中**每个**元素x**都有**Y中唯一确定的元素y与之对应。
 
 ![image-20250304202249631](./pic/image-20250304202249631.png)
 
+![image-20250324132206413](./pic/image-20250324132206413.png)
+
 ![image-20250304202700724](./pic/image-20250304202700724.png)
 
 ![image-20250304202918612](./pic/image-20250304202918612.png)
 
+![image-20250324132247615](./pic/image-20250324132247615.png)
+
+![image-20250324132329094](./pic/image-20250324132329094.png)
+
+![image-20250324132432915](./pic/image-20250324132432915.png)
+
 ![image-20250304203000655](./pic/image-20250304203000655.png)
 
-![image-20250304203448222](./pic/image-20250304203448222.png)
+![](./pic/image-20250304203448222.png)
 
-![image-20250305160208397](./pic/image-20250305160208397.png)
+![image-20250324132543427](./pic/image-20250324132543427.png)
+
+![image-20250305164002612](./pic/image-20250305164002612.png)
+
+![image-20250305164557118](./pic/image-20250305164557118.png)
+
+
+
+![image-20250305164604269](./pic/image-20250305164604269.png)
 
 ## 3.4 关系的传递闭包
 
@@ -375,13 +447,17 @@ f:对X中**每个**元素x**都有**Y中唯一确定的元素y与之对应。
 
  ![image-20250305114704144](./pic/image-20250305114704144.png)
 
+
+
 ![image-20250305115716415](./pic/image-20250305115716415.png)
 
-![image-20250305164002612](./pic/image-20250305164002612.png)
+![image-20250324135203589](./pic/image-20250324135203589.png)
 
-![image-20250305164557118](./pic/image-20250305164557118.png)
+ ![image-20250324135404773](./pic/image-20250324135404773.png)
 
-![image-20250305164604269](./pic/image-20250305164604269.png)
+![image-20250324135828979](./pic/image-20250324135828979.png)
+
+![image-20250324135840738](./pic/image-20250324135840738.png)
 
 ## 3.5 关系矩阵与关系图
 
@@ -397,6 +473,14 @@ f:对X中**每个**元素x**都有**Y中唯一确定的元素y与之对应。
 
  ![image-20250305121238523](./pic/image-20250305121238523.png)
 
+![image-20250324141532967](./pic/image-20250324141532967.png)
+
+![image-20250324141604448](./pic/image-20250324141604448.png)
+
+![image-20250324141644810](./pic/image-20250324141644810.png)
+
+![image-20250324141830181](./pic/image-20250324141830181.png)
+
 ## 3.6 等价关系
 
 ![image-20250305121520059](./pic/image-20250305121520059.png)
@@ -404,6 +488,8 @@ f:对X中**每个**元素x**都有**Y中唯一确定的元素y与之对应。
 ![image-20250305121843869](./pic/image-20250305121843869.png)
 
 ![image-20250305123254725](./pic/image-20250305123254725.png)
+
+![image-20250324143635742](./pic/image-20250324143635742.png)
 
 ![image-20250305123436821](./pic/image-20250305123436821.png)
 
@@ -413,24 +499,69 @@ f:对X中**每个**元素x**都有**Y中唯一确定的元素y与之对应。
 
  ![image-20250305125319189](./pic/image-20250305125319189.png)
 
+![image-20250324144055074](./pic/image-20250324144055074.png)
+
 ![image-20250305125628389](./pic/image-20250305125628389.png)
 
+![image-20250324144216149](./pic/image-20250324144216149.png)
+
+![image-20250324144220340](./pic/image-20250324144220340.png)
+
 ![image-20250305125745221](./pic/image-20250305125745221.png)
+
+![image-20250324152224590](./pic/image-20250324152224590.png)
+
+a. $2^{n^2 - n}$ b.$2^{n^2 - n}$c.$2^{n(n-1)/2 + n}$
+
+![image-20250324152758857](./pic/image-20250324152758857.png)
 
 ## 3.7 偏序关系
 
 ![image-20250305131604213](./pic/image-20250305131604213.png)
 
+![image-20250324151938763](./pic/image-20250324151938763.png)
+
+![image-20250324152907888](./pic/image-20250324152907888.png)
 
 ![image-20250305131904058](./pic/image-20250305131904058.png)
+
+![image-20250324153207075](./pic/image-20250324153207075.png)
+
+![image-20250324154007023](./pic/image-20250324154007023.png)
+
+![image-20250324154044960](./pic/image-20250324154044960.png)
+
+![image-20250324154112838](./pic/image-20250324154112838.png)
 
 ![image-20250305132425832](./pic/image-20250305132425832.png)
 
 ![image-20250305132713481](./pic/image-20250305132713481.png)
 
+![image-20250324153609359](./pic/image-20250324153609359.png)
+
 ![image-20250305133257394](./pic/image-20250305133257394.png)
 
+![image-20250324154329779](./pic/image-20250324154329779.png)
+
+![image-20250324155237745](./pic/image-20250324155237745.png)
+
+![image-20250324155243831](./pic/image-20250324155243831.png)
+
+![image-20250324155407568](./pic/image-20250324155407568.png)
+
+![image-20250324160233606](./pic/image-20250324160233606.png)
+
+![image-20250324160120533](./pic/image-20250324160120533.png)
+
+![image-20250324160339823](./pic/image-20250324160339823.png)
+
+![image-20250324160345560](./pic/image-20250324160345560.png)
+
 ![image-20250305133603407](./pic/image-20250305133603407.png)
+
+![image-20250324161807976](./pic/image-20250324161807976.png)
+
+![image-20250324161816850](./pic/image-20250324161816850.png)
 
 ![image-20250305135118211](./pic/image-20250305135118211.png)
 
@@ -444,28 +575,63 @@ f:对X中**每个**元素x**都有**Y中唯一确定的元素y与之对应。
 
 ![image-20250305171724005](./pic/image-20250305171724005.png)
 
+![image-20250324162903581](./pic/image-20250324162903581.png)
 
+![image-20250324162923166](./pic/image-20250324162923166.png)
+
+![image-20250324163319193](./pic/image-20250324163319193.png)
+
+![image-20250324163349155](./pic/image-20250324163349155.png)
+
+# 第四章 无穷集合及其基数
+
+# 4.1 可数集
+
+**可数集是无穷集合**
+
+![image-20250324163510751](./pic/image-20250324163510751.png)
+
+![image-20250324163708234](./pic/image-20250324163708234.png)
+
+![image-20250324163720649](./pic/image-20250324163720649.png)
+
+![image-20250324163730953](./pic/image-20250324163730953.png)
+
+![image-20250324163818699](./pic/image-20250324163818699.png)
 
 ![image-20250306131215723](./pic/image-20250306131215723.png)
+
+![image-20250324163948343](./pic/image-20250324163948343.png)
 
 ![image-20250306131640501](./pic/image-20250306131640501.png)
 
 ![image-20250306131739604](./pic/image-20250306131739604.png)
 
-
 ![image-20250306131916246](./pic/image-20250306131916246.png)
+
+可数个有穷集的并集可以是可数的，也可以是有穷的。
 
 ![image-20250306132040415](./pic/image-20250306132040415.png)
 
 ![image-20250306144631934](./pic/image-20250306144631934.png)
 
+![image-20250324164514492](./pic/image-20250324164514492.png)
+
 ![image-20250306145004802](./pic/image-20250306145004802.png)
 
 ![image-20250306145032576](./pic/image-20250306145032576.png)
 
+![image-20250324165103861](./pic/image-20250324165103861.png)
+
+![image-20250324165119986](./pic/image-20250324165119986.png)
+
 ## 4.2 连续统集
 
+[0,1]中有理数构成的集合是可数集。
+
 ![image-20250306150437703](./pic/image-20250306150437703.png)
+
+![image-20250324165403346](./pic/image-20250324165403346.png)
 
 ![image-20250306150755469](./pic/image-20250306150755469.png)
 
@@ -479,9 +645,13 @@ f:对X中**每个**元素x**都有**Y中唯一确定的元素y与之对应。
 
 ![image-20250306152201049](./pic/image-20250306152201049.png)
 
+![image-20250324165710230](./pic/image-20250324165710230.png)
+
  ![image-20250306152411952](./pic/image-20250306152411952.png)
 
  ![image-20250306152722638](./pic/image-20250306152722638.png)
+
+![image-20250324171202632](./pic/image-20250324171202632.png)
 
 ![image-20250306153553669](./pic/image-20250306153553669.png)
 
@@ -493,6 +663,54 @@ f:对X中**每个**元素x**都有**Y中唯一确定的元素y与之对应。
 
 ## 4.3 无穷集合的基数
 
+补充概念：**集合的对等**
+
+**集合的对等**指两个集合之间存在**双射函数**（即一一对应），使得它们的元素可以完全配对，没有剩余。这种关系表明它们的**基数**（元素个数，包括无限情况下的“大小”）相同。具体要点如下：
+
+---
+
+### 核心定义
+- **对等**：若集合 \( A \) 和 \( B \) 之间存在一个双射函数 \( f: A $\to$ B \)，即：
+  - **单射**：\( A \) 中不同元素映射到 \( B \) 中不同元素；
+  - **满射**：\( B \) 中每个元素都被 \( A \) 的某个元素映射到；
+- 则称 \( A \) 与 \( B \) **对等**，记为 \( A $\sim￥ B \)，且它们的基数相同，即 \( |A| = |B| \)。
+
+---
+
+### 关键例子
+1. **有限集**：
+   - \( A = \{1, 2, 3\} \) 与 \( B = \{a, b, c\} \) 对等，基数均为 3。
+2. **无限可数集**：
+   - 自然数集 \( $\mathbb{N}$ \) 与偶数集 \( \{2, 4, 6, $\ldots$\} \) 对等，基数均为 \( $\aleph_0$ \)（阿列夫零）。
+3. **不可数集**：
+   - 区间 \([0,1]\) 与实数集 \( $\mathbb{R} $\) 对等，基数均为连续统 \($ \mathfrak{c}$ \)。
+
+---
+
+### 对等的性质
+- **等价关系**：
+  - **自反性**：\( A $\sim$ A \)；
+  - **对称性**：若 \( A $\sim$ B \)，则 \( B $\sim$ A \)；
+  - **传递性**：若 \( A$ \sim$ B \) 且 \( B$ \sim $C \)，则 \( A $\sim $C \)。
+
+---
+
+### 对等与基数的关系
+- **基数符号**：所有对等的集合共享同一个基数符号。例如：
+  - 所有基数为 3 的集合标记为 \( |A| = 3 \)；
+  - 所有可数无限集标记为 \( $\aleph_0 $\)；
+  - 所有连续统基数集标记为 \($\mathfrak{c}$ \)。
+
+---
+
+### 为什么对等强调双射？
+- **双射的严格性**：双射确保两个集合的“大小”完全一致，既无重复也无遗漏。
+- **对角线法证明**：若两集合不对等（如自然数集与实数集），则无法构造双射，基数不同（例如康托尔对角线法证明实数不可数）。
+
+---
+
+**总结**：集合的对等是基数相同的严格数学定义，核心是存在双射函数。无论集合元素的具体内容如何，只要元素能一一对应，它们就对等。
+
 ![image-20250306154237115](./pic/image-20250306154237115.png)·
 
 ![image-20250306154303201](./pic/image-20250306154303201.png)
@@ -500,6 +718,8 @@ f:对X中**每个**元素x**都有**Y中唯一确定的元素y与之对应。
 ![image-20250306154421043](./pic/image-20250306154421043.png)
 
   ![image-20250306154842025](./pic/image-20250306154842025.png)
+
+![image-20250324172835389](./pic/image-20250324172835389.png)
 
 ![image-20250306155312837](./pic/image-20250306155312837.png)
 
