--- a/集合论与图论.md
+++ b/集合论与图论.md
@@ -757,8 +757,6 @@ a. $2^{n^2 - n}$ b.$2^{n^2 - n}$c.$2^{n(n-1)/2 + n}$
 
 ![image-20250306164101433](./pic/image-20250306164101433.png)
 
-## 4.5 悖论
-
  ![image-20250306165109574](./pic/image-20250306165109574.png)
 
 ![image-20250306165127603](./pic/image-20250306165127603.png)
@@ -785,9 +783,21 @@ a. $2^{n^2 - n}$ b.$2^{n^2 - n}$c.$2^{n(n-1)/2 + n}$
 
 ![image-20250307115005689](./pic/image-20250307115005689.png)
 
+![image-20250324200033487](./pic/image-20250324200033487.png)
+
 ![image-20250307115239551](./pic/image-20250307115239551.png)
 
 ![image-20250307115928705](./pic/image-20250307115928705.png)
+
+同构图是一对无向图。
+
+下面的例子的每个点度均为3，故互为同构。
+
+![image-20250324200448655](./pic/image-20250324200448655.png)
+
+![image-20250324200701615](./pic/image-20250324200701615.png)
+
+![image-20250324200855250](./pic/image-20250324200855250.png)
 
 ## 5.3 路 图 连通
 
@@ -795,7 +805,15 @@ a. $2^{n^2 - n}$ b.$2^{n^2 - n}$c.$2^{n(n-1)/2 + n}$
 
 ![image-20250307121340745](./pic/image-20250307121340745.png)
 
+![image-20250324201308088](./pic/image-20250324201308088.png)
+
+
+
 ![image-20250307122516866](./pic/image-20250307122516866.png)
+
+![image-20250324201700808](./pic/image-20250324201700808.png)
+
+![image-20250324201705275](./pic/image-20250324201705275.png)
 
 ![image-20250307132306557](./pic/image-20250307132306557.png)
 
@@ -815,7 +833,13 @@ a. $2^{n^2 - n}$ b.$2^{n^2 - n}$c.$2^{n(n-1)/2 + n}$
 
  ![image-20250307133452847](./pic/image-20250307133452847.png)
 
+![image-20250324202521854](./pic/image-20250324202521854.png)
+
 ![image-20250307134249739](./pic/image-20250307134249739.png)
+
+![image-20250324202857499](./pic/image-20250324202857499.png)
+
+![image-20250324202945447](./pic/image-20250324202945447.png)
 
 ![image-20250307134958234](./pic/image-20250307134958234.png)
 
@@ -840,11 +864,15 @@ a. $2^{n^2 - n}$ b.$2^{n^2 - n}$c.$2^{n(n-1)/2 + n}$
 
 ![image-20250307144340125](./pic/image-20250307144340125.png)
 
+![image-20250324215234610](./pic/image-20250324215234610.png)
+
 ![image-20250307144804155](./pic/image-20250307144804155.png)
 
 ![image-20250307145623564](./pic/image-20250307145623564.png)
 
 ![image-20250307150926366](./pic/image-20250307150926366.png)
+
+这道题就是p-1个顶点相互有路，然后多出一条边连接第p个结点
 
 ![image-20250307163951788](./pic/image-20250307163951788.png)
 
@@ -858,6 +886,16 @@ a. $2^{n^2 - n}$ b.$2^{n^2 - n}$c.$2^{n(n-1)/2 + n}$
 
 ![image-20250307171325474](./pic/image-20250307171325474.png)
 
+![image-20250324214423731](./pic/image-20250324214423731.png)
+
+![image-20250324214436914](./pic/image-20250324214436914.png)
+
+![image-20250324215559061](./pic/image-20250324215559061.png)
+
+![image-20250324215619549](./pic/image-20250324215619549.png)
+
+必要条件，剩下的支的个数为3，但减去的顶点数为2.
+
 
 
 ## 5.7 图的表示
@@ -865,6 +903,40 @@ a. $2^{n^2 - n}$ b.$2^{n^2 - n}$c.$2^{n(n-1)/2 + n}$
  ![image-20250307153507780](./pic/image-20250307153507780.png)
 
 ## 5.8 带权图
+
+
+
+## 5.9 整理
+
+### 联通图
+
+充分1：对于任意的u,v，当uv∉E时，degu+degv >= p - 1
+
+充分2：对于任意的u，当u∈E时，degu >=$\lceil \frac{p}{2} \rceil$
+
+有圈充分：对于任意的u，当u∈E时，degu 为偶数且不为0。2
+
+偶图充要：所有的圈均为偶数长。
+
+图兰定理：若图中不存在三角形，则图中的边数最多为$\lceil \frac{p^2}{4} \rceil$
+
+### 欧拉图
+
+充要：连通图中顶点度均为偶数
+
+欧拉开迹：连通图中恰有两个度为奇数的顶点
+
+开迹计算：连通图中恰有2n个度为奇数的顶点，则全部可以排成n条开迹，并至少有n条开迹
+
+### 哈密顿图
+
+必要：w(G - S) <= |S|
+
+充分1：顶点大于3的连通图中，任意u∈E，有degu＞=p/2
+
+充分2： 对于任意的u,v，当uv∈E时，有degu + degv >= p
+
+哈密顿路充分：同连通图充分1。
 
 # 第六章 树 割集
 
@@ -878,13 +950,17 @@ a. $2^{n^2 - n}$ b.$2^{n^2 - n}$c.$2^{n(n-1)/2 + n}$
 
 ![image-20250307211202418](./pic/image-20250307211202418.png)
 
+![image-20250324225211123](./pic/image-20250324225211123.png)
+
 ## 6.2 生成树
 
- ![image-20250307212921947](./pic/image-20250307212921947.png)
+![image-20250307212921947](./pic/image-20250307212921947.png)
 
 ![image-20250307213551451](./pic/image-20250307213551451.png)
 
 ![image-20250307225311762](./pic/image-20250307225311762.png)
+
+![image-20250324230545137](./pic/image-20250324230545137.png)
 
 ## 6.3 割点 桥
 
@@ -896,13 +972,23 @@ a. $2^{n^2 - n}$ b.$2^{n^2 - n}$c.$2^{n(n-1)/2 + n}$
 
 ![image-20250307234946092](./pic/image-20250307234946092.png)
 
+![image-20250324232623279](./pic/image-20250324232623279.png)
+
+![image-20250324232739575](./pic/image-20250324232739575.png)
+
+不一定是，例如“8”图
+
+一定不是，必要条件
+
+一定不是，因为边不能经过两次
+
+一定不是，因为边不能经过两次
+
 # 第八章 连通度 匹配
 
 ## 8.1 连通度
 
 ![image-20250308122443911](./pic/image-20250308122443911.png)
-
-![image-20250308122531782](./pic/image-20250308122531782.png)
 
 ![image-20250308122745104](./pic/image-20250308122745104.png)
 
@@ -915,6 +1001,8 @@ a. $2^{n^2 - n}$ b.$2^{n^2 - n}$c.$2^{n(n-1)/2 + n}$
 
 
 ![image-20250308125412965](./pic/image-20250308125412965.png)
+
+n-顶点联通简称n-联通
 
 ![image-20250308125640384](./pic/image-20250308125640384.png)
 
