--- a/集合论与图论.md
+++ b/集合论与图论.md
@@ -22,6 +22,8 @@
 
 ![image-20250302142618180](./pic/image-20250302142618180.png)
 
+![image-20250325093358178](./pic/image-20250325093358178.png)
+
 ![image-20250302150219996](./pic/image-20250302150219996.png)
 
 ![image-20250302150357839](./pic/image-20250302150357839.png)
@@ -130,6 +132,16 @@
 
 ![image-20250323141846033](./pic/image-20250323141846033.png)
 
+![image-20250325103537567](./pic/image-20250325103537567.png)
+
+![image-20250325103556966](./pic/image-20250325103556966.png)
+
+![image-20250325103606785](./pic/image-20250325103606785.png)
+
+
+
+
+
 # 第二章 映射
 
  ## 2.1 映射
@@ -193,7 +205,9 @@ f:对X中**每个**元素x**都有**Y中唯一确定的元素y与之对应。
 
 ![image-20250323153525690](./pic/image-20250323153525690.png)
 
+![image-20250325103858937](./pic/image-20250325103858937.png)
 
+![image-20250325103939275](./pic/image-20250325103939275.png)
 
 ## 2.3 映射的一般性质
 
@@ -329,11 +343,27 @@ f:对X中**每个**元素x**都有**Y中唯一确定的元素y与之对应。
 
 ![image-20250304165212572](./pic/image-20250304165212572.png)
 
+![image-20250325111215352](./pic/image-20250325111215352.png)
+
 ![image-20250305140932875](./pic/image-20250305140932875.png)
 
 ![image-20250305140920960](./pic/image-20250305140920960.png)
 
 ![image-20250324115437979](./pic/image-20250324115437979.png)
+
+![image-20250325112356846](./pic/image-20250325112356846.png)
+
+![image-20250325112421372](./pic/image-20250325112421372.png)
+
+![image-20250325113117335](./pic/image-20250325113117335.png)
+
+![image-20250325113656327](./pic/image-20250325113656327.png)
+
+![image-20250325114635706](./pic/image-20250325114635706.png)
+
+![image-20250325113724245](./pic/image-20250325113724245.png)
+
+
 
 ## 2.8 特征函数
 
@@ -543,6 +573,26 @@ a. $2^{n^2 - n}$ b.$2^{n^2 - n}$c.$2^{n(n-1)/2 + n}$
 
 ![image-20250324152758857](./pic/image-20250324152758857.png)
 
+![image-20250325142827959](./pic/image-20250325142827959.png)
+
+![image-20250325142850832](./pic/image-20250325142850832.png)
+
+![image-20250325142944053](./pic/image-20250325142944053.png)
+
+![image-20250325143219182](./pic/image-20250325143219182.png)
+
+![image-20250325143427112](./pic/image-20250325143427112.png)
+
+![image-20250325143857513](./pic/image-20250325143857513.png)
+
+![image-20250325143906265](./pic/image-20250325143906265.png)
+
+![image-20250325143914429](./pic/image-20250325143914429.png)
+
+![image-20250325145155222](./pic/image-20250325145155222.png)
+
+![image-20250325145206888](./pic/image-20250325145206888.png)
+
 ## 3.7 偏序关系
 
 ![image-20250305131604213](./pic/image-20250305131604213.png)
@@ -611,7 +661,25 @@ a. $2^{n^2 - n}$ b.$2^{n^2 - n}$c.$2^{n(n-1)/2 + n}$
 
 ![image-20250324163349155](./pic/image-20250324163349155.png)
 
-# 第四章 无穷集合及其基数
+![image-20250325151254764](./pic/image-20250325151254764.png)
+
+![image-20250325151308209](./pic/image-20250325151308209.png)
+
+![image-20250325152355643](./pic/image-20250325152355643.png)
+
+![image-20250325152412345](./pic/image-20250325152412345.png)
+
+![image-20250325153023913](./pic/image-20250325153023913.png)
+
+![image-20250325153037308](./pic/image-20250325153037308.png)
+
+![image-20250325155007100](./pic/image-20250325155007100.png)
+
+![image-20250325155025473](./pic/image-20250325155025473.png)
+
+
+
+# 第四章 无穷集合及其基数	
 
 # 4.1 可数集
 
@@ -761,6 +829,22 @@ a. $2^{n^2 - n}$ b.$2^{n^2 - n}$c.$2^{n(n-1)/2 + n}$
 
 ![image-20250306165127603](./pic/image-20250306165127603.png)
 
+![image-20250325153940033](./pic/image-20250325153940033.png)
+
+![image-20250325154409669](./pic/image-20250325154409669.png)
+
+![image-20250325154720456](./pic/image-20250325154720456.png)
+
+![image-20250325155357889](./pic/image-20250325155357889.png)
+
+![image-20250325155856689](./pic/image-20250325155856689.png)
+
+![image-20250325162242925](./pic/image-20250325162242925.png)
+
+~是等势
+
+![image-20250325163108970](./pic/image-20250325163108970.png)
+
 #  第六章 图的基本概念
 
 ## 6.2 图的基本概念
@@ -799,6 +883,20 @@ a. $2^{n^2 - n}$ b.$2^{n^2 - n}$c.$2^{n(n-1)/2 + n}$
 
 ![image-20250324200855250](./pic/image-20250324200855250.png)
 
+![image-20250325164148597](./pic/image-20250325164148597.png)
+
+![image-20250325164411755](./pic/image-20250325164411755.png)
+
+![image-20250325164426072](./pic/image-20250325164426072.png)
+
+![image-20250325164437922](./pic/image-20250325164437922.png)
+
+![image-20250325164455203](./pic/image-20250325164455203.png)
+
+![image-20250325164752880](./pic/image-20250325164752880.png)
+
+有三个点度为4说明剩下俩点至少度为3
+
 ## 5.3 路 图 连通
 
 ![image-20250307121023960](./pic/image-20250307121023960.png)
@@ -829,6 +927,8 @@ a. $2^{n^2 - n}$ b.$2^{n^2 - n}$c.$2^{n(n-1)/2 + n}$
 
 ![image-20250307161249959](./pic/image-20250307161249959.png)
 
+
+
 ## 5.4 补图 双图
 
  ![image-20250307133452847](./pic/image-20250307133452847.png)
@@ -844,6 +944,25 @@ a. $2^{n^2 - n}$ b.$2^{n^2 - n}$c.$2^{n(n-1)/2 + n}$
 ![image-20250307134958234](./pic/image-20250307134958234.png)
 
 ![image-20250307135929421](./pic/image-20250307135929421.png)
+
+![image-20250325170354306](./pic/image-20250325170354306.png)
+
+- [子图](https://so.csdn.net/so/search?q=子图&spm=1001.2101.3001.7020)
+  定义：子图G’中所有的顶点和边均包含于原图G。即E’∈E，并且V’∈V。
+- 生成子图（Spanning Subgraph）
+  定义：生成子图G’中顶点个数V’必须和原图G中V的数量相同，而E’∈E即可。
+- 导出子图(Induced Subgraph)
+  定义：导出子图G’，V’∈V，但对于V’中任一顶点，只要在原图G中有对应边，那么就要出现在E’中。
+
+![image-20250325171631475](./pic/image-20250325171631475.png)
+
+![image-20250325171624782](./pic/image-20250325171624782.png)
+
+![image-20250325172014555](./pic/image-20250325172014555.png)
+
+![image-20250325172103649](./pic/image-20250325172103649.png)
+
+
 
 ## 5.5 欧拉图
 
@@ -895,6 +1014,10 @@ a. $2^{n^2 - n}$ b.$2^{n^2 - n}$c.$2^{n(n-1)/2 + n}$
 ![image-20250324215619549](./pic/image-20250324215619549.png)
 
 必要条件，剩下的支的个数为3，但减去的顶点数为2.
+
+![image-20250325173247437](./pic/image-20250325173247437.png)
+
+![image-20250325173303546](./pic/image-20250325173303546.png)
 
 
 
