--- a/集合论与图论.md
+++ b/集合论与图论.md
@@ -1221,6 +1221,8 @@ n-顶点联通简称n-联通
 
 ![image-20250308162651179](./pic/image-20250308162651179.png)
 
+本质上同胚就是消减二度顶点，然后两图通过，才叫同胚
+
 ![image-20250308163318462](./pic/image-20250308163318462.png)
 
 ![image-20250309114448916](./pic/image-20250309114448916.png)
