--- a/问老谷问题.md
+++ b/问老谷问题.md
@@ -18,8 +18,17 @@
    - 要是两个相机面对白墙就认为创造目标点，匹配两个相机keypoint
    - 两个能捕捉红外的黑白摄像机 和一个在中间的RGB摄像机：语义分割，目标检测需要用到RGB
    - 深度图和RGB对齐，可以得到RGBD信息，可以得到深度信息（距离）和彩色信息（目标检测）
-5. 路径规划，A算法和Dijkstra。结合A*和深度学习的方法。你们用的技术
+5. 路径规划，A算法和**Dijkstra**。结合A*和深度学习的方法。你们用的技术
    - **问老肖 或万强**
+   - 从起点开始调用一次算法 把中间要走的路都计算出来 
+   - 报点的间隔 实时计算 
+   - 优先把每条路起点终点都记录 建筑都记录 
+   - 北斗定位 集成在 树莓派
+   - 检测到偏离轨道计算 先上传起点和终点位置算完了传下来 检测是否偏航在树莓派里边 若偏航再计算一次
+   - 专利的创新点在与权值
+   - 为什么不用prim。因为prim是最小生成树 权值最小 但不知道起点和终点 他不是路径规划算法
+     - 路径规划：dijkstra floyd A*
+     - 最小生成树：克鲁思卡尔
 6. 图像、语音和道路数据上传云，云计算结果下载到本地。你们这个云计算计算的是什么，是拥挤度吗？碰撞和预警系统是部署在本地的吗
    - 每人拍了四五百张照片并标注，一共2000张左右
    - 用了图像增强技术（剪裁，分割，人为增加噪声 遮挡 ），扩充到10000张
@@ -32,11 +41,16 @@
    4. 基于目标检测网络辅助视障人士通过红绿灯路口；
    5. 用户偏离道路后轨迹纠正，并发出提醒。本发明能综合道 路的长度、宽度、类别、人流量等信息，从而为视障人士推荐一条路况良好、距离 较近的路线，进而能保障视障人士的安全出行。
    6. **问万强**
+      1. 抽象成无向图：因为能从A到B就能从B走到A。徒增工作量
 8. 精准定位技术：借助移远RM500Q-GL芯片实现了PPP5G拨号上网及厘米级北斗/GPS/伽利略多星定位功能，并成功在树莓派中烧写了硬件驱动并借助busybox的microbox 实现了USB串口的AT通信成功获取定位数据，再通过远程IP访问获取实时定位 数据的功能
    - 芯片接收到5G的信号进行上下传 
    - 上传50ms+处理300ms+下载50ms：0.4s
-9. 语音识别：本工作借助了 OpenAI 公司的 Wisper 开源项目成功复现了中文语音识别。要中文语音识别干啥?
+9. 语音播报：本工作借助了 OpenAI 公司的 Wisper 开源项目成功复现了中文语音识别。要中文语音识别干啥?
    - 识别残障人士的语音
+   - 调用函数 把文字转化为语音
+   - 一直在说话?  
+   - 功能可以开关
+   - 函数输入是一段文本 输出是语音
 10. 导航界面：pyqt5
 11. 基于视觉理解的实时环境感知模块
     1. 计算机视觉:系统可以通过摄像头组获取前方的彩色图像，并根据两颗黑白摄像机的双目 视差计算出前方的深度图像。
