--- a/面试准备.md
+++ b/面试准备.md
@@ -1,16 +1,16 @@
-# 专业知识
-
-
-
 # 项目竞赛
 
-一个国家级大创负责人。
+一个国家级大创负责人，又参与了另一组国家级大创。
+
+## 自己的大创和奖项
+
+三个软著，一个专利，一个未完成的TVCG CCFA类论文
 
 我们这组国家级大创是从我们的互联网＋项目转化而来，大二当时我想参与挑战杯和互联网＋比赛，从大二开始加入数据可视化实验室。
 
 当时老师和安徽省计量院那边有联系，给我们一个新的课题是有关于充电桩计量和动力电池状态分析。我们最终选了动力电池状态分析的可视化。
 
-我大二时候就组了个队伍参与了互联网＋拿了省银，然后又凭借这个项目参加了挑战杯、计算机设计大赛、节能环保大赛、ICAN和其他的比赛，都拿了奖。大二期间我还同时参加了另外一组互联网＋，团队顺位第二，也拿了省银。
+我大二时候就组了个队伍参与了互联网＋拿了省银，然后又凭借这个项目带领团队参加了挑战杯、计算机设计大赛、节能环保大赛、ICAN和其他的比赛，都拿了奖。大二期间我还同时参加了另外一组互联网＋，团队顺位第二，也拿了省银。
 
 这个项目后来转化为了我们的国家级大创，同时也是我的毕设。
 
@@ -34,11 +34,95 @@
 * 那你们这个程序或者平台怎么给专家用？我做了一个前端可视化的平台，上面有各种数据信息和可视化图表，可以支撑专家进行数据分析。
 * 毕设是由我的大创项目转化而来。
 
-我同时也参与了另一组国家级大创项目，是我室友他们的。他们做的是一个头戴式为盲人提供环境感知的出行导航系统。我在里边主要负责路径规划算法。
+## 老谷的大创
 
-* 这一组大创主要做了
+我同时也参与了另一组国家级大创项目，是我室友他们的。他们做的是一个头戴式为盲人提供环境感知的出行导航系统。我在里边主要负责路径规划算法和语音播报。
+
+* 这一组大创主要做了一个和云端协同的嵌入式开发。
+* 用两组黑白摄像头测量深度信息，用一个RGB摄像头识别色彩和红外点阵。用的yolo目标检测和语义分割还有目标追踪，三个摄像头识别之后，在树莓派里边将图像上传至云端。我们用的北斗5G拨号上网技术，延时比较低，上传50ms，处理300ms，下载50ms。在云端进行目标检测与语义分割，计算结果再下载到树莓派通过OpenAI开源的Wisper技术实现中文语音播报，告知盲人前面的障碍物信息。
+* 我们大创小组每个人在学校拍了四五百张照片，一共两千张，用了图像增强技术（剪裁、分割、认为增加噪声和遮挡），扩充到了10000张
+* 除此之外，我们也集成了路径规划功能，我们把学校里边的每一个人可以走的道路都做了数据收集，比如他的道路类型，道路长度，道路起点和终点的坐标等，并把整个学校抽象成了一个带权无向图。这样比如盲人要去一个地方，上传到云端之后会计算权值最小路径，然后在传下来数据语音播报信息。若盲人偏航就实时规划路径。
+* 算法用的Dijkstra。最短路径问题。
+* 我们还集成了目标与道路检测及碰撞预警，根据设备的惯性传感器IMU获得使用者的速度和移动方向。
+* 我们的视觉识别没有训练，但是语义分割训练了，因为要识别校园内的各种障碍物。同时认为增加了噪声和遮挡。
+* 针对客户端与服务器的双向数据传输本工作将会使用套接字实现。
+* 树莓派运行内存8G 录像上传位置下载数据只用了100M内存
+* 深度图和RGB图对齐，可以得到RGBD信息，可以得到深度信息（距离）和彩色信息（目标检测）。
+
+## 课表小程序
+
+我大二还参加了一个自发的学校课表小程序团队，前端缺人我就过去写了大半年的前端。
+
+* 用户13k+，日活动量3k+、
+* 我们有课表、成绩、地图、图书管空座、校园卡流水、考试安排等功能
+* 我们的流程比较规范，有项目评审、有UI设计、体验测试、上传git管理等，每周固定一次线上会
+
+## 领域方向综合设计
+
+垃圾小车：我们有一个毕业的领域方向综合设计，我抽到了垃圾小车的课题。我用手机的微信小程序模拟了垃圾小车，并与云端交互实时上传自己的坐标。在PC端后台做了一个完整的垃圾车管理平台，可以看到垃圾车的实时位置和历史轨迹。
+
+* 项目后台展示历史轨迹和实时位置借助百度地图API完成的
+* Java与数据库交互用的spring-boot，数据库可视化用的navicat，小程序开发软件用的h-builder，本地前后端接口测试用的apipost，云服务器用的阿里云，与云服务器交互用的Xshell
+
+## 计组CPU
+
+课设CPU：我们计算机组成原理课设是做CPU，用的Verilog模拟的。我们这组只完成了单周期CPU的设计
+
+# 专业知识
+
+## 智慧问答系统
+
+* 智慧问答系统是一种通过自然语言交互从数据自动提取答案的系统
+* 哈工大之前有个新闻自研的“华佗”（HuaTuo）模型在医疗QA中表现优异
+* 我经常听我的研究生同学说多模态融合技术前景很广
+  * 多模态融合式指将不同类型的数据如文本、图像、语音等信息进行联合处理和分析。目标是打破单一模态的局限性，提升模型感知和决策能力。
+
+## 教师远程监考系统
+
+* 多模态数据采集模块
+  * 智能终端集成：全景摄像头、屏幕共享（如果在电子设备上作答）、生物特征验证（人脸识别 声纹认证 防替考）、环境传感器等；教师端用多视角监考面板。
+  * 为了防止云端带宽压力在本地设备预处理数据，比如压缩视频
+* 多模态行为识别：
+  * 视觉分析 头部姿态 手势识别
+  * 语音分析 声纹
+  * 文本分析 屏幕OCR
+  * 异常行为评分：用**图神经网络GNN**构建行为关联图谱，动态计算作弊风险值
+* 自适应交互界面：在考场AI语音提示学生和老师有作弊嫌疑
+* 安全隐私：模糊考生的背景
+* 冗余设计：考生数据及时备份，云端和本地端都存一份
+* 离线模式：考生断网之后仍能本地录制考试过程
+* 压力测试：一千个人一万个人测试系统抗压能力
+* 多模态作弊意图预测
+* 生成式AI交互：AI辅助监考，给每个学生一个监考报告
+* 微表情识别：检测考生紧张情绪，评估作弊可能
+
+## 进程与分配内存
+
+进程创建的时候分配大量内存好不好？
+
+会浪费内存。应该在创建的时候给一个适当的内存，然后动态调整。给一个进程过大的内存会导致内存给新进程空间不足，导致系统并发性下降。并且由于可容纳进程数变少会导致却也频繁，也会导致系统效率降低。在分配内存时，可选择全局或局部的更改方式。
 
 # 研究方向和未来规划
 
+哈工大计算机有什么专业：
+
+* 本科：
+  * 计科
+  * 信安
+  * 生物信息学
+  * 物联网
+  * 数据科学与大数据
+  * 人工智能
+  * 软工
+
 # 综合素质
 
+在校团委做过一年的干事和半年的干部
+
+大一做PPT兼职
+
+我们大创老师特别想留我，让我报本校 我没答应
+
+在上海实习半年回来考研
+
+想再往南方走一点
